--- a/bp/styles.css
+++ b/bp/styles.css
@@ -3,8 +3,18 @@
 /*Fonts and general styling*/
 
 /* <link href='http://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'> */
-p.simple {font-size: 12rem; font-family: Arial, sans-serif; font-weight: 700; color: #807F83;line-height: 
-	10rem;text-align: center; margin: 21% 0 7% 0;}
+p.simple {font-size: 12rem; 
+	font-family: Arial, sans-serif; 
+	font-weight: 700; 
+	color: #000;
+	line-height: 10rem;
+	text-align: center; 
+	margin: 21% 0 7% 0;
+	-webkit-transition: all 1.597s ease; 
+	-moz-transition: all 1.597s ease; 
+	-o-transition: all 1.597s ease; 
+	transition: all 1.597s ease;
+}
 /* latin */
 @font-face {
   font-family: 'Raleway';
