--- a/bp/styles.css
+++ b/bp/styles.css
@@ -238,6 +238,10 @@ div.fixed.center.visible-xs {
 
 #me h3, #skills h3, #resume h3, #portfolio h3, #ios h3, #contact h3 {color: #807F83;}
 
+#tweets {
+	
+}
+
 .modal-overlay {
 	background: rgb(255,255,255);
 	background: rgba(255,255,255,0.95);
