--- a/bp/styles.css
+++ b/bp/styles.css
@@ -122,7 +122,7 @@ li {padding: 0.75rem 0; font-size:1.125rem;}
 #main.show {visibility: visible; opacity: 1;}
 
 .menu {
-	background: rgba(255, 255, 255, 0.85);
+	background-color: rgba(255, 255, 255, 0.85);
 	box-shadow: 0 0 0 #fff;
 	opacity: 0;
 	visibility: hidden;
@@ -132,6 +132,19 @@ li {padding: 0.75rem 0; font-size:1.125rem;}
 	transition: all 1.597s ease;
 }
 
+.black {
+	-webkit-transition: all 1.597s ease; 
+	-moz-transition: all 1.597s ease; 
+	-o-transition: all 1.597s ease;
+	background-color: rgba(41,41,43,0.85);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #303032), color-stop(1.0, rgba(41,41,43,0.85)));
+	background: -moz-linear-gradient(top, #303032, rgba(41,41,43,0.85));
+}
+
+.black.bs {
+	box-shadow: 1px 1px 55px #000000;
+}
+
 .bs {
 	box-shadow: 1px 1px 55px #888888;
 	opacity: 1;
@@ -139,16 +152,20 @@ li {padding: 0.75rem 0; font-size:1.125rem;}
 }
 
 .menu a {
-	color: #000000 !important;
+	color: #000000;
 	margin: 0 !important;
 	font-size: 1.5rem;
 	text-decoration: none;
 }
 
 	.menu a:hover {
-		color: #807F83 !important;
+		color: #807F83;
 		opacity: 0.8;
 	}
+
+.black a {
+	color: #ffffff;
+}
 
 .menu .bh1:hover {
 	border-bottom: 2px solid #CC6699;
