--- a/bp-black/styles.css
+++ b/bp-black/styles.css
@@ -1,3 +1,18 @@
+body {
+    background-image: url(img/background@2x.jpg);
+}
+
+#bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+    background: #FFF;
+    background-size: cover !important;
+}
+
 /* Custom styles */
 
 /*Fonts and general styling*/
