--- a/bp-black/styles.css
+++ b/bp-black/styles.css
@@ -131,10 +131,6 @@ li {padding: 0.75rem 0; font-size:1.125rem;}
 
 .header h1, .header h2, .header h3, .header h4, .header h5, .header h6, .header p {color:#ffffff;}
 
-#main {visibility: hidden; opacity:0; -webkit-transition: all 1.597s ease; -moz-transition: all 1.597s ease; 
-	-o-transition: all 1.597s ease; transition: all 1.597s ease;}
-#main.show {visibility: visible; opacity: 1;}
-
 .menu {
 	background-color: rgba(0,0,0,0.6);
 	opacity: 0;
@@ -265,10 +261,10 @@ div.fixed.center.visible-xs {
 
 /* Cusom Divs */
 
-#main {visibility: hidden; opacity:0; transition:opacity 1.597s; -webkit-transition: 1.597s opacity; 
+#me {visibility: hidden; opacity:0; transition:opacity 1.597s; -webkit-transition: 1.597s opacity; 
 	-moz-transition: 1.597s opacity; -webkit-transition: all 1.597s ease; -moz-transition: all 1.597s ease; 
 	-o-transition: all 1.597s ease; transition: all 1.597s ease;}
-#main.show {visibility: visible; opacity: 1;}
+#me.show {visibility: visible; opacity: 1;}
 
 #me h3, #skills h3, #resume h3, #portfolio h3, #ios h3, #contact h3 {color: #807F83;}
 
