--- a/bp-black/styles.css
+++ b/bp-black/styles.css
@@ -261,10 +261,10 @@ div.fixed.center.visible-xs {
 
 /* Cusom Divs */
 
-#me {visibility: hidden; opacity:0; transition:opacity 1.597s; -webkit-transition: 1.597s opacity; 
+#main {visibility: hidden; opacity:0; transition:opacity 1.597s; -webkit-transition: 1.597s opacity; 
 	-moz-transition: 1.597s opacity; -webkit-transition: all 1.597s ease; -moz-transition: all 1.597s ease; 
 	-o-transition: all 1.597s ease; transition: all 1.597s ease;}
-#me.show {visibility: visible; opacity: 1;}
+#main.show {visibility: visible; opacity: 1;}
 
 #me h3, #skills h3, #resume h3, #portfolio h3, #ios h3, #contact h3 {color: #807F83;}
 
