--- a/bp-black/styles.css
+++ b/bp-black/styles.css
@@ -1,6 +1,6 @@
 /*body {
     background-image: url(img/background@2x.jpg);
-}*/
+}
 
 
 
@@ -10,6 +10,21 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}*/
+
+body {
+    background-image: url(img/background2.jpg);
+}
+
+#bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+    background: #FFF;
+    background-size: cover !important;
 }
 
 /* Custom styles */
