Initial state of tweets div changed

--- a/bp/styles.css
+++ b/bp/styles.css
@@ -261,7 +261,7 @@ div.fixed.center.visible-xs {
 #me h3, #skills h3, #resume h3, #portfolio h3, #ios h3, #contact h3 {color: #807F83;}
 
 #tweets {
-	display: none;
+	display: block;
 }
 
 div.row.clients {
