--- a/bp/styles.css
+++ b/bp/styles.css
@@ -2,44 +2,24 @@
 
 /*Fonts and general styling*/
 
-/* <link href='http://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'> */
-p.simple {font-size: 12rem; 
-	font-family: Arial, sans-serif; 
-	font-weight: 700; 
-	color: #888;
-	line-height: 10rem;
-	text-align: center; 
-	margin: 19% 0 2% 0;
-	-webkit-transition: all 2.584s ease; 
-	-moz-transition: all 2.584s ease; 
-	-o-transition: all 2.584s ease; 
-	transition: all 2.584s ease;
+/* <link href='http://fonts.googleapis.com/css?family=Raleway:200,300,400,700' rel='stylesheet' type='text/css'> */
+
+/* latin */
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 200;
+  src: local('Raleway ExtraLight'), local('Raleway-ExtraLight'), url(http://fonts.gstatic.com/s/raleway/v9/8KhZd3VQBtXTAznvKjw-kwsYbbCjybiHxArTLjt7FRU.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
-p.simplify {font-size: 12rem; 
-	font-family: Arial, sans-serif; 
-	font-weight: 700; 
-	color: #33CCFF;
-	line-height: 10rem;
-	text-align: center; 
-	margin: 1% 0 1% 0;
-	-webkit-transition: all 2.584s ease; 
-	-moz-transition: all 2.584s ease; 
-	-o-transition: all 2.584s ease; 
-	transition: all 2.584s ease;
-}
-
-p.ksimple {font-size: 12rem; 
-	font-family: Arial, sans-serif; 
-	font-weight: 700; 
-	color: #99CC66;
-	line-height: 10rem;
-	text-align: center; 
-	margin: 1% 0 1% 0;
-	-webkit-transition: all 2.584s ease; 
-	-moz-transition: all 2.584s ease; 
-	-o-transition: all 2.584s ease; 
-	transition: all 2.584s ease;
+/* latin */
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Raleway Light'), local('Raleway-Light'), url(http://fonts.gstatic.com/s/raleway/v9/-_Ctzj9b56b8RgXW8FAriQsYbbCjybiHxArTLjt7FRU.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
 /* latin */
@@ -63,20 +43,47 @@ p.ksimple {font-size: 12rem;
   U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
+p.simple {
+	color: #888;
+	margin: 15% 0 2% 0;
+}
+
+p.simplify { 
+	color: #33CCFF;
+}
+
+p.ksimple {
+	color: #99CC66;
+}
+
+p.simplify, p.ksimple {
+	margin: 1% 0 1% 0;
+}
+
+p.simple, p.simplify, p.ksimple {
+	font-size: 15rem;
+	font-family: Arial, "Helvetica", Helvetica, sans-serif;
+	text-rendering: optimizeLegibility;
+	font-weight: 700;
+	line-height: 13rem;
+	text-align: center;
+	-webkit-transition: all 2.584s ease;
+	-moz-transition: all 2.584s ease;
+	-o-transition: all 2.584s ease;
+	transition: all 2.584s ease;
+}
+
 .row {max-width: 64rem; margin: 0 auto !important;}
-body {font-family: 'Raleway', Arial, "Helvetica", Helvetica, sans-serif; font-weight: 400; text-rendering:
- optimizeLegibility;}
-h1, h2, h3, h4, h5, h6 {font-family: 'Raleway', Arial, "Helvetica", Helvetica, sans-serif; font-weight: 400;}
+body {font-family: 'Raleway', Arial, "Helvetica", Helvetica, sans-serif; font-weight: 300; text-rendering: optimizeLegibility;}
+h1, h2, h3, h4, h5, h6 {font-family: 'Raleway', Arial, "Helvetica", Helvetica, sans-serif; font-weight: 200; text-rendering: optimizeLegibility;}
 button, .button {font-family: 'Raleway', Arial, "Helvetica", Helvetica, sans-serif;}
 
-h1              { font-size: 2.5rem; margin: .67rem 0; }
+h1              { font-size: 5rem; margin: .67rem 0; }
 h2              { font-size: 2rem; margin: .75rem 0; }
 h3              { font-size: 1.5rem; margin: .83rem 0; }
 h4              { font-size: 1.125rem; margin: .83rem 0; }
 h5              { font-size: 1rem; margin: 1.5rem 0; }
 h6              { font-size: .83rem; margin: 1.67rem 0; }
-h1, h2, h3, h4,
-h5, h6          { font-weight: bolder; }
 p 				{ font-size: 1.125rem;}
 
 a {color: #000000;}
@@ -247,14 +254,21 @@ div.fixed.center.visible-xs {
 	box-shadow: none;
 }
 
-/* Cusom Divs */
+/* Custom Divs */
 
 #main {visibility: hidden; opacity:0; transition:opacity 1.597s; -webkit-transition: 1.597s opacity; 
 	-moz-transition: 1.597s opacity; -webkit-transition: all 1.597s ease; -moz-transition: all 1.597s ease; 
 	-o-transition: all 1.597s ease; transition: all 1.597s ease;}
 #main.show {visibility: visible; opacity: 1;}
 
-#me h3, #skills h3, #resume h3, #portfolio h3, #ios h3, #contact h3 {color: #807F83;}
+#me h2, #skills h2, #resume h2, #portfolio h2, #ios h2, #contact h2 {
+	font-size: 2.5rem;
+}
+
+#me h3, #skills h3, #resume h3, #portfolio h3, #ios h3, #contact h3 {
+	color: #807F83;
+	font-size: 200%;
+}
 
 #tweets {
 	display: block;
@@ -433,7 +447,7 @@ div.controls > button + label{
 
 .container .mix{
   text-align: left;
-  background: #03899c;
+  background: transparent;
   margin-bottom: 2%;
   display: none;
 }
@@ -490,4 +504,11 @@ div.controls > button + label{
 	p.simple {font-size: 4.5rem !important; line-height: 4rem !important; margin-top: 35%;}
 	p.simplify, p.ksimple {font-size: 4.5rem !important; line-height: 4rem !important;}
 	nav {display:none;}
+}
+
+/* ADA helpers */
+
+[tabindex]:focus, a:focus, area:focus, button:focus, input:focus, object:focus, select:focus, textarea:focus {
+	outline: none;
+	outline-offset: -1px;
 }
