--- a/demo-one-page/css/style.css
+++ b/demo-one-page/css/style.css
@@ -1,7 +1,63 @@
+/* Basic layout styling */
+
 body {
-	background-color: #bada55;
+	background-color: rgb(0,0,0);
+	color: rgb(125,125,125);
 }
 
 .row {
 	max-width: 186.25rem;
+}
+
+#first {
+	margin-top: 2rem;
+}
+
+/* Spacings and elemnts ordering */
+
+.ptb8 {
+	padding: 0.5rem 0;
+}
+
+.center {
+	text-align: center;
+}
+
+div.menu {
+	z-index: 999;
+}
+
+input.menuB {
+	margin: 0 auto;
+}
+
+/* Coloring */
+
+nav {
+	background-color: rgba(255,255,255,0.85);
+}
+
+	nav a {
+		color: rgb(0,0,0);
+	}
+
+div.menu {
+	background-color: rgba(255,255,255,0.65);
+}
+
+/* Custom media queries */
+
+@media only screen and (max-width: 40.063em) { 
+	
+	#first {
+		margin-top: 4rem;
+	}
+
+	nav {
+		display: none;	
+	}
+
+	nav {
+		background-color: transparent;
+	}
 }
