--- a/bp-black/styles.css
+++ b/bp-black/styles.css
@@ -339,7 +339,7 @@ button:focus {outline:0;}
 
 .menuB{
 	font-size: 1.25rem;
-    margin: 0 auto;
+    margin: 0 auto 1.1rem;
     color: #ffffff;
 	background-color: #000000;
 }
